--- a/Meus Filmes/Storyboards/Filmes.storyboard
+++ b/Meus Filmes/Storyboards/Filmes.storyboard
@@ -19,28 +19,42 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FilmeTableViewCell" rowHeight="60" id="utQ-Co-8cg" customClass="FilmeTableViewCell" customModule="Meus_Filmes" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="60"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="FilmeTableViewCell" rowHeight="100" id="utQ-Co-8cg" customClass="FilmeTableViewCell" customModule="Meus_Filmes" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="utQ-Co-8cg" id="gxu-eh-JGX">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome filme" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0jf-Md-QXX">
-                                                    <rect key="frame" x="13" y="9" width="388" height="42"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageplaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="eFc-6h-Zn8">
+                                                    <rect key="frame" x="20" y="19" width="62" height="62"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="62" id="35E-Pv-UPm"/>
+                                                        <constraint firstAttribute="width" constant="62" id="QI6-rt-4el"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome filme" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0jf-Md-QXX">
+                                                    <rect key="frame" x="100" y="19" width="294" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="1" constant="35" id="31H-os-NW0"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" red="0.89019607840000003" green="0.20392156859999999" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="0jf-Md-QXX" secondAttribute="trailing" constant="13" id="JEg-pT-EH8"/>
-                                                <constraint firstItem="0jf-Md-QXX" firstAttribute="leading" secondItem="gxu-eh-JGX" secondAttribute="leading" constant="13" id="Jbo-zm-19H"/>
-                                                <constraint firstAttribute="bottom" secondItem="0jf-Md-QXX" secondAttribute="bottom" constant="9" id="WWC-JC-xLn"/>
-                                                <constraint firstItem="0jf-Md-QXX" firstAttribute="top" secondItem="gxu-eh-JGX" secondAttribute="top" constant="9" id="fzQ-BY-vuY"/>
+                                                <constraint firstItem="0jf-Md-QXX" firstAttribute="leading" secondItem="eFc-6h-Zn8" secondAttribute="trailing" constant="18" id="04F-cX-h28"/>
+                                                <constraint firstItem="eFc-6h-Zn8" firstAttribute="top" secondItem="gxu-eh-JGX" secondAttribute="topMargin" constant="8" id="2OY-Mc-wpQ"/>
+                                                <constraint firstItem="eFc-6h-Zn8" firstAttribute="leading" secondItem="gxu-eh-JGX" secondAttribute="leadingMargin" id="GhE-jb-APf"/>
+                                                <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="0jf-Md-QXX" secondAttribute="bottom" constant="46" id="UCF-23-X0y"/>
+                                                <constraint firstItem="0jf-Md-QXX" firstAttribute="trailing" secondItem="gxu-eh-JGX" secondAttribute="trailingMargin" id="aEB-0f-u9o"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="eFc-6h-Zn8" secondAttribute="bottom" constant="8" id="szL-hv-D0a"/>
+                                                <constraint firstItem="0jf-Md-QXX" firstAttribute="top" secondItem="gxu-eh-JGX" secondAttribute="topMargin" constant="8" id="xbn-8T-29b"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="imageFilmeImageView" destination="eFc-6h-Zn8" id="VVh-m2-wK0"/>
                                             <outlet property="tituloFilmeLabel" destination="0jf-Md-QXX" id="dQe-TH-gIT"/>
                                         </connections>
                                     </tableViewCell>
@@ -50,19 +64,26 @@
                                     <outlet property="delegate" destination="Hw4-UW-96f" id="ZVC-y2-DHw"/>
                                 </connections>
                             </tableView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="iCD-Ij-LuK">
+                                <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
+                                <color key="color" red="0.89019607840000003" green="0.20392156859999999" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="cFE-0n-XnY" firstAttribute="top" secondItem="ZAJ-TA-Sho" secondAttribute="top" id="AY8-U2-MdY"/>
+                            <constraint firstItem="iCD-Ij-LuK" firstAttribute="centerX" secondItem="ggV-y6-TDc" secondAttribute="centerX" id="Mnr-id-ZXg"/>
                             <constraint firstItem="cFE-0n-XnY" firstAttribute="trailing" secondItem="ZAJ-TA-Sho" secondAttribute="trailing" id="UTo-qh-IGN"/>
                             <constraint firstAttribute="bottom" secondItem="cFE-0n-XnY" secondAttribute="bottom" id="X33-E3-Uqj"/>
                             <constraint firstItem="cFE-0n-XnY" firstAttribute="leading" secondItem="ZAJ-TA-Sho" secondAttribute="leading" id="sU9-nG-dKU"/>
+                            <constraint firstItem="iCD-Ij-LuK" firstAttribute="centerY" secondItem="ggV-y6-TDc" secondAttribute="centerY" id="uca-2S-UoD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ZAJ-TA-Sho"/>
                     </view>
                     <navigationItem key="navigationItem" title="Meus Filmes" id="FNO-bH-Pfz"/>
                     <connections>
                         <outlet property="filmesTableView" destination="cFE-0n-XnY" id="rkt-0X-zwx"/>
+                        <outlet property="loadActivityIndicator" destination="iCD-Ij-LuK" id="37r-B3-kFn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8lP-Pu-lih" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -88,4 +109,7 @@
             <point key="canvasLocation" x="27.536231884057973" y="179.46428571428569"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="imageplaceholder" width="750" height="750"/>
+    </resources>
 </document>
