--- a/Meus Filmes/Storyboards/Filmes.storyboard
+++ b/Meus Filmes/Storyboards/Filmes.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OWz-AY-iaG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OWz-AY-iaG">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -84,11 +84,130 @@
                     <connections>
                         <outlet property="filmesTableView" destination="cFE-0n-XnY" id="rkt-0X-zwx"/>
                         <outlet property="loadActivityIndicator" destination="iCD-Ij-LuK" id="37r-B3-kFn"/>
+                        <segue destination="zAh-kB-4bp" kind="show" identifier="filmesToDetalhesSegue" id="O97-F3-rRw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8lP-Pu-lih" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="937.68115942028987" y="179.46428571428569"/>
+        </scene>
+        <!--Detalhe Filme View Controller-->
+        <scene sceneID="uSu-PV-gPU">
+            <objects>
+                <viewController id="zAh-kB-4bp" customClass="DetalheFilmeViewController" customModule="Meus_Filmes" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UgU-fg-voI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Wf-3V-PEd">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetalheFilmeTableViewCell" rowHeight="465" id="54b-6z-kSE" customClass="DetalheFilmeTableViewCell" customModule="Meus_Filmes" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="465"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="54b-6z-kSE" id="ckL-bt-SdG">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="465"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageplaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="wr2-ZZ-rGW" customClass="plac">
+                                                    <rect key="frame" x="7" y="15" width="400" height="300"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="wr2-ZZ-rGW" secondAttribute="height" multiplier="4:3" id="6BK-63-8du"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Nome filme" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F9b-bn-TcT">
+                                                    <rect key="frame" x="20" y="329" width="374" height="20.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="mHR-6n-6oZ"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" red="0.89019607840000003" green="0.20392156859999999" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Duração:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rTi-b5-COz">
+                                                    <rect key="frame" x="20" y="366" width="374" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="1zb-rW-WwA"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Gênero:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Udo-ds-STZ">
+                                                    <rect key="frame" x="20" y="397" width="374" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Sinopse:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Z7-w5-EDj">
+                                                    <rect key="frame" x="20" y="428" width="374" height="20.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="dnW-7s-o4F"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="0Z7-w5-EDj" firstAttribute="top" secondItem="Udo-ds-STZ" secondAttribute="bottom" constant="10" id="37d-LB-YTD"/>
+                                                <constraint firstItem="rTi-b5-COz" firstAttribute="top" secondItem="F9b-bn-TcT" secondAttribute="bottom" constant="16.5" id="45b-tT-URZ"/>
+                                                <constraint firstAttribute="bottom" secondItem="0Z7-w5-EDj" secondAttribute="bottom" constant="16.5" id="B5b-bB-vyY"/>
+                                                <constraint firstAttribute="trailing" secondItem="F9b-bn-TcT" secondAttribute="trailing" constant="20" id="B9X-2O-WVX"/>
+                                                <constraint firstItem="Udo-ds-STZ" firstAttribute="leading" secondItem="ckL-bt-SdG" secondAttribute="leading" constant="20" id="JOj-Ek-Rqp"/>
+                                                <constraint firstItem="wr2-ZZ-rGW" firstAttribute="top" secondItem="ckL-bt-SdG" secondAttribute="top" constant="15" id="Kfm-K0-7mX"/>
+                                                <constraint firstItem="Udo-ds-STZ" firstAttribute="top" secondItem="rTi-b5-COz" secondAttribute="bottom" constant="10" id="T3f-1I-jjw"/>
+                                                <constraint firstItem="0Z7-w5-EDj" firstAttribute="leading" secondItem="ckL-bt-SdG" secondAttribute="leading" constant="20" id="TkI-t7-LEc"/>
+                                                <constraint firstAttribute="trailing" secondItem="0Z7-w5-EDj" secondAttribute="trailing" constant="20" id="UDO-qN-DRn"/>
+                                                <constraint firstItem="F9b-bn-TcT" firstAttribute="leading" secondItem="ckL-bt-SdG" secondAttribute="leading" constant="20" id="c1W-ND-ETw"/>
+                                                <constraint firstAttribute="trailing" secondItem="wr2-ZZ-rGW" secondAttribute="trailing" constant="7" id="gHJ-VZ-izZ"/>
+                                                <constraint firstAttribute="trailing" secondItem="rTi-b5-COz" secondAttribute="trailing" constant="20" id="kZr-sH-oRa"/>
+                                                <constraint firstItem="wr2-ZZ-rGW" firstAttribute="leading" secondItem="ckL-bt-SdG" secondAttribute="leading" constant="7" id="nvk-QQ-xHP"/>
+                                                <constraint firstAttribute="trailing" secondItem="Udo-ds-STZ" secondAttribute="trailing" constant="20" id="taB-Bz-Pk7"/>
+                                                <constraint firstItem="F9b-bn-TcT" firstAttribute="top" secondItem="wr2-ZZ-rGW" secondAttribute="bottom" constant="14" id="wuR-uc-FjG"/>
+                                                <constraint firstItem="rTi-b5-COz" firstAttribute="leading" secondItem="ckL-bt-SdG" secondAttribute="leading" constant="20" id="y33-4V-JbE"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="duracaoLabel" destination="rTi-b5-COz" id="3bB-VW-hFE"/>
+                                            <outlet property="generoLabel" destination="Udo-ds-STZ" id="PZe-9h-GtB"/>
+                                            <outlet property="nomeFilmeLabel" destination="F9b-bn-TcT" id="QRi-tn-I5w"/>
+                                            <outlet property="posterImageView" destination="wr2-ZZ-rGW" id="Gjm-f9-lZp"/>
+                                            <outlet property="sinopseLabel" destination="0Z7-w5-EDj" id="s0x-j0-Ovh"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="zAh-kB-4bp" id="Qee-om-QjZ"/>
+                                    <outlet property="delegate" destination="zAh-kB-4bp" id="Cwt-Yr-oUA"/>
+                                </connections>
+                            </tableView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="big-R8-OoJ">
+                                <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
+                                <color key="color" red="0.89019607840000003" green="0.20392156859999999" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Wf-3V-PEd" firstAttribute="leading" secondItem="m6h-ri-Fft" secondAttribute="leading" id="5Df-zL-3R8"/>
+                            <constraint firstItem="big-R8-OoJ" firstAttribute="centerY" secondItem="UgU-fg-voI" secondAttribute="centerY" id="8g6-Ds-zkB"/>
+                            <constraint firstItem="big-R8-OoJ" firstAttribute="centerX" secondItem="UgU-fg-voI" secondAttribute="centerX" id="X1x-eD-Tyl"/>
+                            <constraint firstItem="6Wf-3V-PEd" firstAttribute="trailing" secondItem="m6h-ri-Fft" secondAttribute="trailing" id="gcA-yH-jaA"/>
+                            <constraint firstItem="6Wf-3V-PEd" firstAttribute="top" secondItem="m6h-ri-Fft" secondAttribute="top" id="jOk-N6-zh8"/>
+                            <constraint firstAttribute="bottom" secondItem="6Wf-3V-PEd" secondAttribute="bottom" id="nKz-7v-nMJ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="m6h-ri-Fft"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="cag-YU-Hmf"/>
+                    <connections>
+                        <outlet property="detalheFilmeTableView" destination="6Wf-3V-PEd" id="YTn-sq-3AU"/>
+                        <outlet property="loadActivityIndicator" destination="big-R8-OoJ" id="tdy-1q-Ojt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4yA-lk-JZC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1757.9710144927537" y="178.79464285714286"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ogd-e2-aB1">
